--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Student Performance System</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
@@ -13,26 +14,45 @@
     <button type="submit">Add Student</button>
 </form>
 
+<br>
+
+<form method="GET">
+    <input type="text" name="search" placeholder="Search by name">
+    <button type="submit">Search</button>
+</form>
+
 <h2>Student Records</h2>
 
-<table border="1">
+<table>
     <tr>
         <th>Name</th>
         <th>Marks</th>
         <th>Result</th>
+        <th>Action</th>
     </tr>
 
     {% for row in data %}
     <tr>
-        <td>{{ row[0] }}</td>
         <td>{{ row[1] }}</td>
         <td>{{ row[2] }}</td>
+        <td class="{{ 'pass' if row[3] == 'Pass' else 'fail' }}">
+            {{ row[3] }}
+        </td>
+        <td>
+            <a href="{{ url_for('edit', id=row[0]) }}">
+                <button>Edit</button>
+            </a>
+
+            <a href="{{ url_for('delete', id=row[0]) }}">
+                <button>Delete</button>
+            </a>
+        </td>
     </tr>
     {% endfor %}
 </table>
 
 <h3>Average Marks: {{ avg }}</h3>
-<h3>Topper: {{ topper[0] }} ({{ topper[1] }})</h3>
+<h3>Topper: {{ topper[0] if topper else '' }} ({{ topper[1] if topper else '' }})</h3>
 
 </body>
 </html>
