--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,20 +2,35 @@
 <html>
 <head>
     <title>Edit Student</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
 
-<h1>Edit Student</h1>
+<div class="container mt-5">
 
-<form method="POST">
-    <input type="text" name="name" value="{{ student[0] }}" required>
-    <input type="number" name="marks" value="{{ student[1] }}" required>
-    <button type="submit">Update</button>
-</form>
+    <div class="card p-4 shadow-sm">
+        <h2 class="text-center text-warning mb-4">Edit Student</h2>
 
-<br>
-<a href="/">Back to Home</a>
+        <form method="POST">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" name="name" value="{{ student[0] }}" class="form-control" required>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Marks</label>
+                <input type="number" name="marks" value="{{ student[1] }}" class="form-control" required>
+            </div>
+
+            <button type="submit" class="btn btn-success w-100">Update</button>
+        </form>
+
+        <br>
+        <a href="/" class="btn btn-secondary w-100">Back to Home</a>
+
+    </div>
+
+</div>
 
 </body>
 </html>
